@@ -1,3 +1,6 @@
+2006-12-08	Richard van den Berg  <richard@vdberg.org>
+	* Removed ustat dead code
+
 2006-12-07	Richard van den Berg  <richard@vdberg.org>
 	* Released version 0.13
 	* Changed version to post-0.13
